<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Inicio">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:text="@string/Ini_titulo" />

    <TextView
        android:id="@+id/txtIn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Ini_txt1" />

    <TextView
        android:id="@+id/txtIn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Ini_txt2" />

    <TextView
        android:id="@+id/txtIn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Ini_txt3" />

    <Button
        android:id="@+id/btnPregunta1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_marginStart="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:text="@string/Ini_btn1" />

    <Button
        android:id="@+id/btnPregunta2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="preguntaDos"
        android:layout_marginStart="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:text="@string/Ini_btn2"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="357dp" />

    <Button
        android:id="@+id/btnPregunta3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="preguntaTres"
        android:layout_marginStart="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:text="@string/Ini_btn3"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="489dp" />

    <Button
        android:id="@+id/btnPregunta4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="preguntaCuatro"
        android:layout_marginStart="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:text="@string/Ini_btn4"
        tools:layout_editor_absoluteX="193dp"
        tools:layout_editor_absoluteY="589dp" />

</LinearLayout>