<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onClick"
    android:orientation="vertical"
    tools:context=".Pregunta2">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:text="@string/prg2_titulo" />

    <EditText
        android:id="@+id/edtNota1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/prg2_nota1"
        android:inputType="number"

        tools:layout_editor_absoluteX="78dp" />

    <EditText
        android:id="@+id/edtNota2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prg2_nota2"
        android:inputType="number"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="309dp" />

    <EditText
        android:id="@+id/edtNota3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prg2_nota3"
        android:inputType="number"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="436dp" />

    <EditText
        android:id="@+id/edtNota4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prg2_nota4"
        android:inputType="number"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="553dp" />

    <Button
        android:id="@+id/btnVerPromedio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:textAlignment="center"
        android:text="@string/prg2_btnPromedio" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnRegresar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:onClick="regresarInicio2"
        android:text="@string/prg2_btnRegresar" />

</LinearLayout>